// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox should match the snapshot 1`] = `
<styled.div
  gridGap="10px"
  padding="10px"
>
  <styled.div
    colXS={6}
  >
    <Heading
      component="h4"
    />
  </styled.div>
  <styled.div
    center={true}
    colXS={6}
  >
    <styled.label>
      <styled.input
        type="checkbox"
      />
      <styled.span />
    </styled.label>
  </styled.div>
</styled.div>
`;

exports[`Checkbox should match the snapshot when checked 1`] = `
<styled.div
  gridGap="10px"
  padding="10px"
>
  <styled.div
    colXS={6}
  >
    <Heading
      component="h4"
    />
  </styled.div>
  <styled.div
    center={true}
    colXS={6}
  >
    <styled.label>
      <styled.input
        checked={true}
        type="checkbox"
      />
      <styled.span />
    </styled.label>
  </styled.div>
</styled.div>
`;

exports[`Checkbox should match the snapshot with label 1`] = `
<styled.div
  gridGap="10px"
  padding="10px"
>
  <styled.div
    colXS={6}
  >
    <Heading
      component="h4"
      label="Mock"
    />
  </styled.div>
  <styled.div
    center={true}
    colXS={6}
  >
    <styled.label>
      <styled.input
        type="checkbox"
      />
      <styled.span />
    </styled.label>
  </styled.div>
</styled.div>
`;
